# YT-Summary

./: .env  .env.example  ONENOTE_SETUP.md  README.md  auth_manager.py  main.py  onenote_integration.py  onenote_manager.py  pyproject.toml  summary.py
